--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>PRONIA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
 
@@ -25,9 +22,7 @@
 
     <header class="header-main">
       <div class="wrapper header-main-wrapper">
-        <a class="logo" href="./index.html"
-          ><img src="./assets/logo.png" alt="pronia logo"
-        /></a>
+        <a class="logo" href="./index.html"><img src="./assets/logo.png" alt="pronia logo" /></a>
         <nav class="nav-top">
           <ul>
             <li><a href="./index.html">Home</a></li>
@@ -39,11 +34,7 @@
           <div class="cart-items">
             <span class="cart-num">3</span>
           </div>
-          <img
-            class="shopping-cart"
-            src="./assets/icons/shopping-bag-1.svg"
-            alt="shopping bag icon"
-          />
+          <img class="shopping-cart" src="./assets/icons/shopping-bag-1.svg" alt="shopping bag icon" />
         </a>
       </div>
     </header>
@@ -109,8 +100,91 @@
             <li><a href="#">Latest</a></li>
           </ul>
 
-          <div class="product-cards-container">
-            <a class="grow" href="#">
+          <ul class="plants-list">
+            <li>
+              <a href="#">
+                <img src="assets/p1.jpeg" alt="american marigold plant that is being sold" />
+                <button class="btn-add">
+                  <img src="assets/icons/cart.svg" alt="" />
+                </button>
+              </a>
+              <p>American marigold</p>
+              <span>$23.45</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="assets/p2.jpeg" alt="american marigold plant that is being sold" />
+                <button class="btn-add">
+                  <img src="assets/icons/cart.svg" alt="" />
+                </button>
+              </a>
+              <p>American marigold</p>
+              <span>$23.45</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="assets/p3.jpeg" alt="american marigold plant that is being sold" />
+                <button class="btn-add">
+                  <img src="assets/icons/cart.svg" alt="" />
+                </button>
+              </a>
+              <p>American marigold</p>
+              <span>$23.45</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="assets/p4.jpeg" alt="american marigold plant that is being sold" />
+                <button class="btn-add">
+                  <img src="assets/icons/cart.svg" alt="" />
+                </button>
+              </a>
+              <p>American marigold</p>
+              <span>$23.45</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="assets/p5.jpeg" alt="american marigold plant that is being sold" />
+                <button class="btn-add">
+                  <img src="assets/icons/cart.svg" alt="" />
+                </button>
+              </a>
+              <p>American marigold</p>
+              <span>$23.45</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="assets/p6.jpeg" alt="american marigold plant that is being sold" />
+                <button class="btn-add">
+                  <img src="assets/icons/cart.svg" alt="" />
+                </button>
+              </a>
+              <p>American marigold</p>
+              <span>$23.45</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="assets/p7.jpeg" alt="american marigold plant that is being sold" />
+                <button class="btn-add">
+                  <img src="assets/icons/cart.svg" alt="" />
+                </button>
+              </a>
+              <p>American marigold</p>
+              <span>$23.45</span>
+            </li>
+            <li>
+              <a href="#">
+                <img src="assets/p8.jpeg" alt="american marigold plant that is being sold" />
+                <button class="btn-add">
+                  <img src="assets/icons/cart.svg" alt="" />
+                </button>
+              </a>
+              <p>American marigold</p>
+              <span>$23.45</span>
+            </li>
+          </ul>
+
+          <!-- <div class="product-cards-container">
+              <a class="grow" href="#">
               <div class="product-card">
                 <img
                   src="assets/p1.jpeg"
@@ -123,6 +197,7 @@
                 <span>$23.45</span>
               </div>
             </a>
+
             <a href="#">
               <div class="product-card">
                 <img
@@ -214,7 +289,8 @@
                 <span>$20.00</span>
               </div>
             </a>
-          </div>
+            </ul>
+          </div> -->
         </div>
       </section>
 
@@ -257,11 +333,7 @@
         <div class="wrapper blog-wrapper">
           <div class="text-container">
             <h3 class="section-heading blog-heading">Latest posts</h3>
-            <p>
-              Read the latest posts by Gerard Juan, an unremarkable gentleman
-              who knows absolutely nothing about botany, but who recently
-              learned how to water plants correctly.
-            </p>
+            <p>Read the latest posts by Gerard Juan, an unremarkable gentleman who knows absolutely nothing about botany, but who recently learned how to water plants correctly.</p>
           </div>
           <div class="blog-post-container">
             <article>
@@ -270,16 +342,8 @@
                 <span>3 april 2023</span>
               </div>
               <h5>why you should care about plants</h5>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Mollitia deserunt exercitationem, neque veniam voluptas cumque
-                temporibus aliquam ut enim harum! Quisquam delectus rerum
-                doloremque eligendi? Voluptas obcaecati nemo tenetur debitis.
-              </p>
-              <img
-                src="assets/blog1.jpeg"
-                alt="a person holding a tray with several plants on it"
-              />
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia deserunt exercitationem, neque veniam voluptas cumque temporibus aliquam ut enim harum! Quisquam delectus rerum doloremque eligendi? Voluptas obcaecati nemo tenetur debitis.</p>
+              <img src="assets/blog1.jpeg" alt="a person holding a tray with several plants on it" />
             </article>
             <article>
               <div class="author-flex-container">
@@ -287,16 +351,8 @@
                 <span>3 april 2023</span>
               </div>
               <h5>mental health benefits of being a plant owner</h5>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Mollitia deserunt exercitationem, neque veniam voluptas cumque
-                temporibus aliquam ut enim harum! Quisquam delectus rerum
-                doloremque eligendi? Voluptas obcaecati nemo tenetur debitis.
-              </p>
-              <img
-                src="assets/blog2.jpeg"
-                alt="a potted plant with the sunlight in the background"
-              />
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia deserunt exercitationem, neque veniam voluptas cumque temporibus aliquam ut enim harum! Quisquam delectus rerum doloremque eligendi? Voluptas obcaecati nemo tenetur debitis.</p>
+              <img src="assets/blog2.jpeg" alt="a potted plant with the sunlight in the background" />
             </article>
             <article>
               <div class="author-flex-container">
@@ -304,16 +360,8 @@
                 <span>3 april 2023</span>
               </div>
               <h5>How to plant dad 101</h5>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Mollitia deserunt exercitationem, neque veniam voluptas cumque
-                temporibus aliquam ut enim harum! Quisquam delectus rerum
-                doloremque eligendi? Voluptas obcaecati nemo tenetur debitis.
-              </p>
-              <img
-                src="assets/blog3.jpeg"
-                alt="a person sitting on the ground putting soil in a plant"
-              />
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia deserunt exercitationem, neque veniam voluptas cumque temporibus aliquam ut enim harum! Quisquam delectus rerum doloremque eligendi? Voluptas obcaecati nemo tenetur debitis.</p>
+              <img src="assets/blog3.jpeg" alt="a person sitting on the ground putting soil in a plant" />
             </article>
           </div>
         </div>
@@ -324,36 +372,20 @@
       <footer>
         <div class="wrapper footer-wrapper">
           <div class="footer-nav-container">
-            <a class="logo" href=""
-              ><img src="./assets/logo.png" alt="pronia logo"
-            /></a>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Exercitationem, blanditiis laudantium suscipit fugit voluptatum
-              eum!
-            </p>
+            <a class="logo" href=""><img src="./assets/logo.png" alt="pronia logo" /></a>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem, blanditiis laudantium suscipit fugit voluptatum eum!</p>
             <ul class="social-icons">
               <li>
-                <a href=""
-                  ><img
-                    src="assets/icons/facebook-svgrepo-com.svg"
-                    alt="facebook icon"
-                /></a>
+                <a href=""><img src="assets/icons/facebook-svgrepo-com.svg" alt="facebook icon" /></a>
               </li>
               <li>
-                <a href=""
-                  ><img src="assets/icons/twitter.svg" alt="twitter icon"
-                /></a>
+                <a href=""><img src="assets/icons/twitter.svg" alt="twitter icon" /></a>
               </li>
               <li>
-                <a href=""
-                  ><img src="assets/icons/pinterest.svg" alt="pinterest icon"
-                /></a>
+                <a href=""><img src="assets/icons/pinterest.svg" alt="pinterest icon" /></a>
               </li>
               <li>
-                <a href=""
-                  ><img src="assets/icons/dribble.svg" alt="dribble icon"
-                /></a>
+                <a href=""><img src="assets/icons/dribble.svg" alt="dribble icon" /></a>
               </li>
             </ul>
           </div>
