update js - page displays plants from firebase live db

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </ul>
 
           <ul class="plants-list">
-            <li>
+            <!-- <li>
               <a href="#">
                 <img src="assets/p1.jpeg" alt="american marigold plant that is being sold" />
                 <button class="btn-add">
@@ -180,9 +180,10 @@
               </a>
               <p>American marigold</p>
               <span>$23.45</span>
-            </li>
+            </li> -->
           </ul>
 
+          <!-- commented-out old markup with plants contained in separate containers -->
           <!-- <div class="product-cards-container">
               <a class="grow" href="#">
               <div class="product-card">
