add additional properties to plant objects

--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
           <!-- Shopping Cart -->
           <!-- <dialog class="modal" id="modal"> -->
           <div class="shoppingCartContainer" id="shoppingCartContainer">
-            <div class="totalTitle">Total</div>
-            <div class="totalPrice">$0</div>
-            <ul id="shoppingCart"></ul>
+            <span>Total</span>
+            <span class="totalPrice">$0</span>
+            <ul id="shoppingCart">
+              // Items added to cart will appear in this list:
+            </ul>
             <button id="increase">🔼</button>
             <button id="decrease">🔽</button>
             <button id="remove">❌</button>
@@ -201,7 +203,7 @@
               <div class="product-card">
                 <img
                   src="assets/p1.jpeg"
-                  alt="american marigold plant that is being sold"
+                  alt="an american marigold plant that is being sold"
                 />
                 <button class="btn-add">
                   <img src="assets/icons/cart.svg" alt="" />
