--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="./contact.html">Contact us</a></li>
           </ul>
         </nav>
-        <a class="cart" href="">
+        <a class="cart-button">
           <div class="cart-items">
             <span class="cart-num">3</span>
           </div>
@@ -99,22 +99,18 @@
             <li><a href="#">Bestseller</a></li>
             <li><a href="#">Latest</a></li>
           </ul>
-
           <!-- Shopping Cart -->
-          <!-- <dialog class="modal" id="modal"> -->
-          <div class="shoppingCartContainer" id="shoppingCartContainer">
-            <span>Total</span>
-            <span class="totalPrice">$0</span>
-            <ul id="shoppingCart">
-              // Items added to cart will appear in this list:
-            </ul>
-            <button id="increase">🔼</button>
-            <button id="decrease">🔽</button>
-            <button id="remove">❌</button>
-          </div>
-          <!-- </dialog> -->
+          <dialog class="modal" id="modal">
+            <div class="cartContainer" id="cartContainer">
+              <ul class="cart">
+                <!-- cart items go here -->
+              </ul>
+              <div class="totalPrice"></div>
+              <button class="close-button">Close Cart</button>
+            </div>
+          </dialog>
 
-          <ul class="plants-list">
+          <ul class="plants-list" id="gallery">
             <!-- <li>
               <a href="#">
                 <img src="assets/p1.jpeg" alt="american marigold plant that is being sold" />
@@ -203,7 +199,7 @@
               <div class="product-card">
                 <img
                   src="assets/p1.jpeg"
-                  alt="an american marigold plant that is being sold"
+                  alt="american marigold plant that is being sold"
                 />
                 <button class="btn-add">
                   <img src="assets/icons/cart.svg" alt="" />
@@ -212,7 +208,6 @@
                 <span>$23.45</span>
               </div>
             </a>
-
             <a href="#">
               <div class="product-card">
                 <img
